# physics-llm-agents

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  run_benchmark.py  run_dataprep.py  run_evaluation.py  run_vector_rag_insert.py  scieval_evaluate.py
artifacts/: results.json
benchmarks/: additional_benchs.ipynb  overview_and_zero_shot.ipynb  topic_classification.ipynb
config/: baseline_react_agent.yaml  benchmark.yaml  cot_plan_react_agent.yaml  cot_plan_react_agent_v2.yaml  data.yaml  plan_react_agent.yaml  simple_planning_agent.yaml  simple_planning_agent_cot.yaml  simple_planning_agent_cot_v2.yaml  strict_planning_agent.yaml  thinking_react_agent.yaml  vector_rag.yaml
docs/: proposal_presentation.pptx
sql/postgres/: create_index.sql  create_table.sql  insert_table.sql  truncate_table.sql
src/agents/: baseline_react_agent.py  cot_plan_react_agent.py  cot_plan_react_agent_v2.py  plan_react_agent.py  simple_planning_agent.py  simple_planning_agent_cot.py  strict_planning_agent.py  thinking_react_agent.py
src/agents/utils/: llm.py  plan.py  tools.py
src/benchmarks/: mmlu.py  scieval.py
src/data/: openstax.py
src/knowledge_bases/: vector_rag.py
src/models/: langgraph.py  ollama.py  openai_api.py  vllm.py
src/utils/: helpers.py  mmlu.py  openai_api.py  scieval.py
